@@ -140,11 +140,11 @@
     <!-- Perform a <commit/> automatically under certain conditions:
          maxDocs - number of updates since last commit is greater than this
          maxTime - oldest uncommited update (in ms) is this long ago
-    <autoCommit> 
-      <maxDocs>10000</maxDocs>
-      <maxTime>1000</maxTime> 
-    </autoCommit>
     -->
+    <autoCommit>
+      <maxDocs>10000</maxDocs> <!--Commit every 10.000 documents-->
+      <maxTime>900000</maxTime> <!--Commit every 15 minutes-->
+    </autoCommit>
 
     <!-- The RunExecutableListener executes an external command.
          exe - the name of the executable to run
